--- a/package.json
+++ b/package.json
@@ -17,5 +17,8 @@
   "bugs": {
     "url": "https://github.com/w3bdesign/dfweb/issues"
   },
-  "homepage": "https://github.com/w3bdesign/dfweb#readme"
+  "homepage": "https://github.com/w3bdesign/dfweb#readme",
+  "devDependencies": {
+    "parcel-bundler": "^1.12.4"
+  }
 }
