--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
   },
   "dependencies": {
-    "gatsby": "^2.19.45",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0"
+    "gatsby": "^2.20.4",
+    "gatsby-plugin-postcss": "^2.2.1",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1"
   },
   "devDependencies": {
-    "prettier": "^1.19.1"
+    "prettier": "^2.0.2",
+    "tailwindcss": "^1.2.0"
   },
   "repository": {
     "type": "git",
