--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "gatsby": "^2.20.4",
     "gatsby-plugin-postcss": "^2.2.1",
+    "gatsby-plugin-purgecss": "^5.0.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1"
   },
