--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "gatsby": "^2.20.4",
     "gatsby-plugin-postcss": "^2.2.1",
     "gatsby-plugin-purgecss": "^5.0.0",
+    "gatsby-source-filesystem": "^2.2.2",
+    "gatsby-transformer-remark": "^2.7.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1"
   },
