--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
   },
   "dependencies": {
-    "gatsby": "^2.20.10",
+    "framer-motion": "^1.10.3",
+    "gatsby": "^2.20.15",
     "gatsby-plugin-postcss": "^2.2.1",
     "gatsby-plugin-purgecss": "^5.0.0",
     "gatsby-source-filesystem": "^2.2.2",
@@ -23,7 +24,7 @@
     "react-dom": "^16.13.1"
   },
   "devDependencies": {
-    "prettier": "^2.0.2",
+    "prettier": "^2.0.4",
     "tailwindcss": "^1.2.0"
   },
   "repository": {
