--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "tailwindcss": "^1.2.0"
   },
   "devDependencies": {
+    "eslint": "^6.8.0",
+    "eslint-plugin-react": "^7.19.0",
     "prettier": "^2.0.4"
   },
   "repository": {
