--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
     "clean": "gatsby clean",
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
   },
+  
   "dependencies": {
     "framer-motion": "^1.10.3",
-    "gatsby": "^2.20.15",
+    "gatsby": "^2.20.17",
     "gatsby-plugin-postcss": "^2.2.1",
     "gatsby-plugin-purgecss": "^5.0.0",
+    "gatsby-plugin-react-svg": "^3.0.0",
     "gatsby-source-filesystem": "^2.2.2",
     "gatsby-transformer-remark": "^2.7.1",
     "react": "^16.13.1",
@@ -25,8 +27,12 @@
     "tailwindcss": "^1.2.0"
   },
   "devDependencies": {
+    "babel-eslint": "^10.1.0",
     "eslint": "^6.8.0",
+    "eslint-config-prettier": "^6.10.1",
     "eslint-plugin-react": "^7.19.0",
+    "husky": "^4.2.5",
+    "lint-staged": "^10.1.3",
     "prettier": "^2.0.4"
   },
   "repository": {
