--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^5.13.0",
     "framer-motion": "^1.10.3",
     "gatsby": "^2.20.20",
     "gatsby-plugin-postcss": "^2.2.1",
