Convert Fontawesome to use a map()
Convert Fontawesome to use a map() to avoid repeating ourselves

--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "gatsby-transformer-remark": "^2.7.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "tailwindcss": "^1.2.0"
+    "tailwindcss": "^1.2.0",
+    "uuid": "^7.0.3"
   },
   "devDependencies": {
     "babel-eslint": "^10.1.0",
