--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@fortawesome/react-fontawesome": "^0.1.9",
     "framer-motion": "^1.10.3",
     "gatsby": "^2.20.20",
+    "gatsby-plugin-netlify-headers": "^1.0.1",
     "gatsby-plugin-postcss": "^2.2.1",
     "gatsby-plugin-purgecss": "^5.0.0",
     "gatsby-plugin-react-helmet": "^3.2.2",
