--- a/package.json
+++ b/package.json
@@ -18,13 +18,14 @@
     "@fortawesome/free-brands-svg-icons": "^5.13.0",
     "@fortawesome/react-fontawesome": "^0.1.9",
     "framer-motion": "^1.10.3",
-    "gatsby": "^2.20.20",
+    "gatsby": "^2.20.23",
     "gatsby-plugin-netlify-headers": "^1.0.1",
-    "gatsby-plugin-postcss": "^2.2.1",
+    "gatsby-plugin-postcss": "^2.2.2",
     "gatsby-plugin-prefetch-google-fonts": "^1.4.3",
     "gatsby-plugin-purgecss": "^5.0.0",
-    "gatsby-plugin-react-helmet": "^3.2.2",
+    "gatsby-plugin-react-helmet": "^3.2.3",
     "gatsby-plugin-react-svg": "^3.0.0",
+    "gatsby-plugin-sharp": "^2.5.5",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-helmet": "^6.0.0",
