--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "@fortawesome/react-fontawesome": "^0.1.9",
     "framer-motion": "^1.10.3",
     "gatsby": "^2.20.29",
-    "gatsby-plugin-netlify-headers": "^1.0.1",
+    "gatsby-plugin-netlify": "^2.2.3",
     "gatsby-plugin-postcss": "^2.2.3",
     "gatsby-plugin-prefetch-google-fonts": "^1.4.3",
     "gatsby-plugin-purgecss": "^5.0.0",
