--- a/package.json
+++ b/package.json
@@ -25,11 +25,12 @@
     "gatsby-plugin-purgecss": "^5.0.0",
     "gatsby-plugin-react-helmet": "^3.2.5",
     "gatsby-plugin-react-svg": "^3.0.0",
+    "gatsby-plugin-scroll-reveal": "0.0.6",
     "gsap": "^3.2.6",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-helmet": "^6.0.0",
-    "save": "^2.4.0",    
+    "save": "^2.4.0",
     "tailwindcss": "^1.3.5",
     "uuid": "^7.0.3"
   },
