--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "gatsby-starter-hello-world",
+  "name": "dfweb-v2",
   "private": true,
   "description": "A simplified bare-bones starter for Gatsby",
-  "version": "0.1.4",
+  "version": "0.1.6",
   "license": "MIT",
   "scripts": {
     "build": "gatsby build",
@@ -18,31 +18,32 @@
     "@fortawesome/free-brands-svg-icons": "^5.13.0",
     "@fortawesome/react-fontawesome": "^0.1.9",
     "framer-motion": "^1.10.3",
-    "gatsby": "^2.20.33",
-    "gatsby-plugin-netlify": "^2.2.4",
-    "gatsby-plugin-postcss": "^2.2.4",
+    "gatsby": "^2.21.9",
+    "gatsby-plugin-netlify": "^2.3.0",
+    "gatsby-plugin-postcss": "^2.3.0",
     "gatsby-plugin-prefetch-google-fonts": "^1.4.3",
     "gatsby-plugin-purgecss": "^5.0.0",
-    "gatsby-plugin-react-helmet": "^3.2.5",
+    "gatsby-plugin-react-helmet": "^3.3.0",
     "gatsby-plugin-react-svg": "^3.0.0",
     "gatsby-plugin-robots-txt": "^1.5.0",
-    "gatsby-plugin-sitemap": "^2.4.0",
+    "gatsby-plugin-sitemap": "^2.4.1",
     "gsap": "^3.2.6",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-helmet": "^6.0.0",
+    "react-spring": "^8.0.27",
     "save": "^2.4.0",
-    "tailwindcss": "^1.3.5",
-    "uuid": "^7.0.3"
+    "tailwindcss": "^1.4.4",
+    "uuid": "^8.0.0"
   },
   "devDependencies": {
     "babel-eslint": "^10.1.0",
-    "babel-jest": "^25.4.0",
-    "babel-preset-gatsby": "^0.3.6",
+    "babel-jest": "^25.5.1",
+    "babel-preset-gatsby": "^0.4.0",
     "eslint": "^6.8.0",
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-react": "^7.19.0",
-    "jest": "^25.4.0",
+    "jest": "^25.5.3",
     "prettier": "^2.0.5",
     "react-test-renderer": "^16.13.1"
   },
