--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-helmet": "^6.0.0",
     "react-spring": "^8.0.27",
     "save": "^2.4.0",
+    "scrollreveal": "^4.0.6",
     "tailwindcss": "^1.4.4",
     "uuid": "^8.0.0"
   },
