--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-helmet": "^6.0.0",
+    "react-pdf": "^4.1.0",
     "react-spring": "^8.0.27",
     "save": "^2.4.0",
     "scrollreveal": "^4.0.6",
