--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@fortawesome/react-fontawesome": "^0.1.9",
     "framer-motion": "^1.10.3",
     "gatsby": "^2.21.9",
+    "gatsby-plugin-manifest": "^2.4.1",
     "gatsby-plugin-netlify": "^2.3.0",
     "gatsby-plugin-postcss": "^2.3.0",
     "gatsby-plugin-prefetch-google-fonts": "^1.4.3",
