--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "dfweb-v2",
   "private": true,
   "description": "A simplified bare-bones starter for Gatsby",
-  "version": "0.1.7",
+  "version": "0.1.8",
   "license": "MIT",
   "scripts": {
     "build": "gatsby build",
@@ -11,7 +11,7 @@
     "start": "npm run develop",
     "serve": "gatsby serve",
     "clean": "gatsby clean",
-    "test": "jest",
+    "test": "cypress open",
     "cypress:open": "cypress open"
   },
   "dependencies": {
@@ -19,17 +19,17 @@
     "@fortawesome/free-brands-svg-icons": "^5.13.0",
     "@fortawesome/react-fontawesome": "^0.1.9",
     "framer-motion": "^1.10.3",
-    "gatsby": "^2.21.9",
-    "gatsby-image": "^2.4.0",
-    "gatsby-plugin-manifest": "^2.4.1",
-    "gatsby-plugin-netlify": "^2.3.0",
-    "gatsby-plugin-postcss": "^2.3.0",
+    "gatsby": "^2.21.13",
+    "gatsby-image": "^2.4.1",
+    "gatsby-plugin-manifest": "^2.4.2",
+    "gatsby-plugin-netlify": "^2.3.2",
+    "gatsby-plugin-postcss": "^2.3.1",
     "gatsby-plugin-prefetch-google-fonts": "^1.4.3",
     "gatsby-plugin-purgecss": "^5.0.0",
-    "gatsby-plugin-react-helmet": "^3.3.0",
+    "gatsby-plugin-react-helmet": "^3.3.1",
     "gatsby-plugin-react-svg": "^3.0.0",
     "gatsby-plugin-robots-txt": "^1.5.0",
-    "gatsby-plugin-sitemap": "^2.4.1",
+    "gatsby-plugin-sitemap": "^2.4.2",
     "gsap": "^3.2.6",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
@@ -43,13 +43,13 @@
   },
   "devDependencies": {
     "babel-eslint": "^10.1.0",
-    "babel-jest": "^25.5.1",
-    "babel-preset-gatsby": "^0.4.0",
+    "babel-jest": "^26.0.1",
+    "babel-preset-gatsby": "^0.4.1",
     "cypress": "^4.5.0",
     "eslint": "^6.8.0",
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-react": "^7.19.0",
-    "jest": "^25.5.3",
+    "jest": "^26.0.1",
     "prettier": "^2.0.5",
     "react-test-renderer": "^16.13.1"
   },
