--- a/package.json
+++ b/package.json
@@ -49,9 +49,11 @@
     "eslint": "^6.8.0",
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-react": "^7.19.0",
+    "gatsby-cypress": "^0.4.1",
     "jest": "^26.0.1",
     "prettier": "^2.0.5",
-    "react-test-renderer": "^16.13.1"
+    "react-test-renderer": "^16.13.1",
+    "start-server-and-test": "^1.11.0"
   },
   "repository": {
     "type": "git",
