--- a/package.json
+++ b/package.json
@@ -10,9 +10,10 @@
     "format": "prettier --write \"**/*.{js,jsx,json,md}\"",
     "start": "npm run develop",
     "serve": "gatsby serve",
-    "clean": "gatsby clean",
-    "test": "cypress open",
-    "cypress:open": "cypress open"
+    "clean": "gatsby clean",    
+    "cypress:open": "cypress open",
+    "test:dev": "CYPRESS_SUPPORT=y start-server-and-test develop http://localhost:8000 cy:open",
+    "test": "CYPRESS_SUPPORT=y npm run build && start-server-and-test serve http://localhost:9000 cy:open"
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.28",
