--- a/package.json
+++ b/package.json
@@ -11,9 +11,10 @@
     "start": "npm run develop",
     "serve": "gatsby serve",
     "clean": "gatsby clean",    
-    "cypress:open": "cypress open",
-    "test:dev": "CYPRESS_SUPPORT=y start-server-and-test develop http://localhost:8000 cy:open",
-    "test": "CYPRESS_SUPPORT=y npm run build && start-server-and-test serve http://localhost:9000 cy:open"
+    "cypress:open": "cypress run",
+    "test:dev": "CYPRESS_SUPPORT=y start-server-and-test develop http://localhost:8000 cy:run",
+    "test": "CYPRESS_SUPPORT=y npm run build && start-server-and-test serve http://localhost:9000 cy:run",
+    "test:e2e": "start-server-and-test develop http://localhost:8000 cy:run"
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.28",
