--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,4 +8,5 @@ orbs:
 workflows:
   build:
     jobs:
+      - start-server-and-test develop http://localhost:8000
       - cypress/run # "run" job comes from "cypress" orb
