--- a/package.json
+++ b/package.json
@@ -12,8 +12,9 @@
     "serve": "gatsby serve",
     "clean": "gatsby clean",    
     "cypress:open": "cypress open",
-    "test:dev": "CYPRESS_SUPPORT=y start-server-and-test develop http://localhost:8000 cy:open",
-    "test": "CYPRESS_SUPPORT=y npm run build && start-server-and-test serve http://localhost:9000 cy:open",
+    "cy:run": "cypress run",
+    "test": "start-server-and-test start http://localhost:8000 cy:run",
+    "test:e2e": "start-server-and-test develop http://localhost:8000 cy:open",
     "test:e2e:ci": "start-server-and-test develop http://localhost:8000 cy:run"
 
   },
