--- a/package.json
+++ b/package.json
@@ -10,13 +10,12 @@
     "format": "prettier --write \"**/*.{js,jsx,json,md}\"",
     "start": "npm run develop",
     "serve": "gatsby serve",
-    "clean": "gatsby clean",    
+    "clean": "gatsby clean",
     "cypress:open": "cypress open",
     "cy:run": "cypress run",
     "test": "start-server-and-test start http://localhost:8000 cy:run",
     "test:e2e": "start-server-and-test develop http://localhost:8000 cy:open",
     "test:e2e:ci": "start-server-and-test develop http://localhost:8000 cy:run"
-
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.28",
@@ -55,6 +54,7 @@
     "eslint-plugin-react": "^7.19.0",
     "gatsby-cypress": "^0.4.1",
     "jest": "^26.0.1",
+    "netlify-plugin-cypress": "^1.3.7",
     "prettier": "^2.0.5",
     "react-test-renderer": "^16.13.1",
     "start-server-and-test": "^1.11.0"
