--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "dfweb-v2",
   "private": true,
   "description": "A simplified bare-bones starter for Gatsby",
-  "version": "0.1.9",
+  "version": "0.2.0",
   "license": "MIT",
   "scripts": {
     "build": "gatsby build",
@@ -19,18 +19,19 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.28",
     "@fortawesome/free-brands-svg-icons": "^5.13.0",
     "@fortawesome/react-fontawesome": "^0.1.9",
-    "framer-motion": "^1.10.3",
-    "gatsby": "^2.21.13",
-    "gatsby-image": "^2.4.1",
-    "gatsby-plugin-manifest": "^2.4.2",
-    "gatsby-plugin-netlify": "^2.3.2",
-    "gatsby-plugin-postcss": "^2.3.1",
+    "framer-motion": "^1.11.0",
+    "gatsby": "^2.22.4",
+    "gatsby-image": "^2.4.5",
+    "gatsby-plugin-manifest": "^2.4.8",
+    "gatsby-plugin-netlify": "^2.3.3",
+    "gatsby-plugin-postcss": "^2.3.2",
     "gatsby-plugin-prefetch-google-fonts": "^1.4.3",
     "gatsby-plugin-purgecss": "^5.0.0",
-    "gatsby-plugin-react-helmet": "^3.3.1",
+    "gatsby-plugin-react-helmet": "^3.3.2",
     "gatsby-plugin-react-svg": "^3.0.0",
     "gatsby-plugin-robots-txt": "^1.5.0",
-    "gatsby-plugin-sitemap": "^2.4.2",
+    "gatsby-plugin-sitemap": "^2.4.3",
+    "gatsby-source-graphql": "^2.5.2",
     "gsap": "^3.2.6",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
@@ -39,19 +40,19 @@
     "react-spring": "^8.0.27",
     "save": "^2.4.0",
     "scrollreveal": "^4.0.6",
-    "tailwindcss": "^1.4.4",
-    "uuid": "^8.0.0"
+    "tailwindcss": "^1.4.6",
+    "uuid": "^8.1.0"
   },
   "devDependencies": {
     "babel-eslint": "^10.1.0",
-    "babel-preset-gatsby": "^0.4.1",
-    "cypress": "^4.5.0",
+    "babel-preset-gatsby": "^0.4.6",
+    "cypress": "^4.6.0",
     "eslint": "^6.8.0",
     "eslint-config-prettier": "^6.11.0",
-    "eslint-plugin-react": "^7.19.0",
-    "gatsby-cypress": "^0.4.1",
-    "netlify-cli": "^2.49.0",
-    "netlify-plugin-cypress": "^1.3.7",
+    "eslint-plugin-react": "^7.20.0",
+    "gatsby-cypress": "^0.4.2",
+    "netlify-cli": "^2.51.0",
+    "netlify-plugin-cypress": "^1.3.9",
     "prettier": "^2.0.5",
     "react-test-renderer": "^16.13.1",
     "start-server-and-test": "^1.11.0"
