--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "dfweb-v2",
   "private": true,
-  "description": "A simplified bare-bones starter for Gatsby",
-  "version": "0.2.0",
+  "description": "Personal portfolio",
+  "version": "0.2.1",
   "license": "MIT",
   "scripts": {
     "build": "gatsby build",
