--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "dfweb-v2",
   "private": true,
   "description": "Personal portfolio",
-  "version": "0.2.7",
+  "version": "0.3.0",
   "license": "MIT",
   "scripts": {
     "build": "gatsby build",
@@ -19,7 +19,7 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.28",
     "@fortawesome/free-brands-svg-icons": "^5.13.0",
     "@fortawesome/react-fontawesome": "^0.1.10",
-    "framer-motion": "^1.11.0",
+    "framer-motion": "^1.11.1",
     "gatsby": "^2.23.3",
     "gatsby-image": "^2.4.7",
     "gatsby-plugin-manifest": "^2.4.11",
@@ -33,6 +33,7 @@
     "gatsby-plugin-sitemap": "^2.4.5",
     "gatsby-source-graphql": "^2.5.4",
     "gsap": "^3.3.3",
+    "nanoid": "^3.1.10",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-helmet": "^6.1.0",
@@ -40,8 +41,7 @@
     "react-spring": "^8.0.27",
     "save": "^2.4.0",
     "scrollreveal": "^4.0.6",
-    "tailwindcss": "^1.4.6",
-    "uuid": "^8.1.0"
+    "tailwindcss": "^1.4.6"
   },
   "devDependencies": {
     "babel-eslint": "^10.1.0",
@@ -51,7 +51,7 @@
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-react": "^7.20.0",
     "gatsby-cypress": "^0.4.4",
-    "netlify-cli": "^2.53.0",
+    "netlify-cli": "^2.54.0",
     "netlify-plugin-cypress": "^1.3.11",
     "prettier": "^2.0.5",
     "react-test-renderer": "^16.13.1",
