--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "dfweb-v2",
   "private": true,
   "description": "Personal portfolio",
-  "version": "0.3.2",
+  "version": "0.3.3",
   "license": "MIT",
   "scripts": {
     "build": "gatsby build",
@@ -19,17 +19,18 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.29",
     "@fortawesome/free-brands-svg-icons": "^5.13.1",
     "@fortawesome/react-fontawesome": "^0.1.11",
-    "gatsby": "^2.23.7",
-    "gatsby-image": "^2.4.7",
-    "gatsby-plugin-manifest": "^2.4.12",
-    "gatsby-plugin-netlify": "^2.3.5",
-    "gatsby-plugin-postcss": "^2.3.4",
+    "framer-motion": "^1.11.1",
+    "gatsby": "^2.23.11",
+    "gatsby-image": "^2.4.9",
+    "gatsby-plugin-manifest": "^2.4.14",
+    "gatsby-plugin-netlify": "^2.3.7",
+    "gatsby-plugin-postcss": "^2.3.6",
     "gatsby-plugin-prefetch-google-fonts": "^1.4.3",
     "gatsby-plugin-purgecss": "^5.0.0",
-    "gatsby-plugin-react-helmet": "^3.3.4",
+    "gatsby-plugin-react-helmet": "^3.3.6",
     "gatsby-plugin-react-svg": "^3.0.0",
     "gatsby-plugin-robots-txt": "^1.5.1",
-    "gatsby-plugin-sitemap": "^2.4.5",
+    "gatsby-plugin-sitemap": "^2.4.7",
     "gatsby-source-graphql": "^2.5.5",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
@@ -38,16 +39,16 @@
     "save": "^2.4.0",
     "scrollreveal": "^4.0.6",
     "tailwindcss": "^1.4.6",
-    "uuid": "^8.1.0"
+    "uuid": "^8.2.0"
   },
   "devDependencies": {
     "babel-eslint": "^10.1.0",
-    "babel-preset-gatsby": "^0.4.10",
-    "cypress": "^4.8.0",
-    "eslint": "^7.3.0",
+    "babel-preset-gatsby": "^0.4.12",
+    "cypress": "^4.9.0",
+    "eslint": "^7.3.1",
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-react": "^7.20.0",
-    "gatsby-cypress": "^0.4.4",
+    "gatsby-cypress": "^0.4.6",
     "netlify-cli": "^2.54.0",
     "netlify-plugin-cypress": "^1.3.11",
     "prettier": "^2.0.5",
