--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.29",
     "@fortawesome/free-brands-svg-icons": "^5.13.1",
     "@fortawesome/react-fontawesome": "^0.1.11",
+    "@loadable/component": "^5.12.0",
     "framer-motion": "^1.11.1",
     "gatsby": "^2.23.11",
     "gatsby-image": "^2.4.9",
