--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@fortawesome/free-brands-svg-icons": "^5.13.1",
     "@fortawesome/react-fontawesome": "^0.1.11",
     "gatsby": "^2.23.11",
+    "gatsby-background-image": "^1.1.1",
     "gatsby-plugin-manifest": "^2.4.14",
     "gatsby-plugin-netlify": "^2.3.7",
     "gatsby-plugin-postcss": "^2.3.6",
@@ -28,8 +29,11 @@
     "gatsby-plugin-react-helmet": "^3.3.6",
     "gatsby-plugin-react-svg": "^3.0.0",
     "gatsby-plugin-robots-txt": "^1.5.1",
+    "gatsby-plugin-sharp": "^2.6.14",
     "gatsby-plugin-sitemap": "^2.4.7",
+    "gatsby-source-filesystem": "^2.3.14",
     "gatsby-source-graphql": "^2.5.7",
+    "gatsby-transformer-sharp": "^2.5.7",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-helmet": "^6.1.0",
