--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@fortawesome/free-regular-svg-icons": "^5.13.1",
     "@fortawesome/react-fontawesome": "^0.1.11",
     "gatsby": "^2.24.2",
+    "gatsby-plugin-fontawesome-css": "^1.0.0",
     "gatsby-plugin-manifest": "^2.4.18",
     "gatsby-plugin-netlify": "^2.3.11",
     "gatsby-plugin-postcss": "^2.3.11",
