--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-dom": "^16.13.1",
     "react-helmet": "^6.1.0",
     "react-pdf": "^4.1.0",
+    "react-reveal-effects": "^1.0.3",
     "scrollreveal": "^4.0.7",
     "tailwindcss": "^1.4.6",
     "uuid": "^8.2.0"
