--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@fortawesome/free-brands-svg-icons": "^5.13.1",
     "@fortawesome/free-regular-svg-icons": "^5.13.1",
     "@fortawesome/react-fontawesome": "^0.1.11",
+    "babel-plugin-styled-components": "^1.10.7",
     "gatsby": "^2.24.2",
     "gatsby-plugin-fontawesome-css": "^1.0.0",
     "gatsby-plugin-manifest": "^2.4.18",
@@ -31,13 +32,16 @@
     "gatsby-plugin-react-svg": "^3.0.0",
     "gatsby-plugin-robots-txt": "^1.5.1",
     "gatsby-plugin-sitemap": "^2.4.11",
+    "gatsby-plugin-styled-components": "^3.3.10",
     "gatsby-source-graphql": "^2.6.2",
     "react": "^16.13.1",
+    "react-animated-burgers": "^1.2.8",
     "react-dom": "^16.13.1",
     "react-helmet": "^6.1.0",
     "react-pdf": "^4.1.0",
     "react-reveal-effects": "^1.0.3",
     "scrollreveal": "^4.0.7",
+    "styled-components": "^5.1.1",
     "tailwindcss": "^1.4.6",
     "uuid": "^8.2.0"
   },
