--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "dfweb-v2",
   "private": true,
   "description": "Personal portfolio",
-  "version": "0.5.6",
+  "version": "0.5.7",
   "license": "MIT",
   "scripts": {
     "build": "gatsby build",
@@ -20,11 +20,13 @@
     "@fortawesome/free-brands-svg-icons": "^5.14.0",
     "@fortawesome/free-regular-svg-icons": "^5.14.0",
     "@fortawesome/react-fontawesome": "^0.1.11",
+    "@percy/agent": "^0.27.2",
     "babel-plugin-styled-components": "^1.10.7",
-    "gatsby": "^2.24.10",
+    "gatsby": "^2.24.11",
     "gatsby-plugin-fontawesome-css": "^1.0.0",
-    "gatsby-plugin-manifest": "^2.4.20",
+    "gatsby-plugin-manifest": "^2.4.21",
     "gatsby-plugin-netlify": "^2.3.11",
+    "gatsby-plugin-percy": "^0.1.4",
     "gatsby-plugin-postcss": "^2.3.11",
     "gatsby-plugin-prefetch-google-fonts": "^1.4.3",
     "gatsby-plugin-purgecss": "^5.0.0",
@@ -46,7 +48,7 @@
   },
   "devDependencies": {
     "babel-eslint": "^10.1.0",
-    "babel-preset-gatsby": "^0.5.3",
+    "babel-preset-gatsby": "^0.5.4",
     "cypress": "^4.11.0",
     "eslint": "^7.5.0",
     "eslint-config-prettier": "^6.11.0",
