--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
   "name": "dfweb-v2",
   "private": true,
   "description": "Personal portfolio",
-  "version": "0.5.8",
+  "version": "0.5.9",
   "license": "MIT",
   "scripts": {
     "build": "gatsby build",
-    "develop": "gatsby develop",
+    "develop": "gatsby clean && gatsby develop",
     "dev": "start-test develop 8000 cy:open",
     "format": "prettier --write \"**/*.{js,jsx,json,md}\"",
     "start": "npm run develop",
@@ -22,7 +22,7 @@
     "@fortawesome/react-fontawesome": "^0.1.11",
     "@percy/agent": "^0.27.2",
     "babel-plugin-styled-components": "^1.11.1",
-    "gatsby": "^2.24.15",
+    "gatsby": "^2.24.23",
     "gatsby-plugin-fontawesome-css": "^1.0.0",
     "gatsby-plugin-manifest": "^2.4.21",
     "gatsby-plugin-netlify": "^2.3.11",
