Removed uuid as it is no longer used

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "dfweb-v2",
   "private": true,
   "description": "Personal portfolio",
-  "version": "0.6.2",
+  "version": "0.6.4",
   "license": "MIT",
   "scripts": {
     "build": "gatsby build",
@@ -42,8 +42,7 @@
     "react-pdf": "^4.2.0",
     "react-reveal-effects": "^1.0.5",
     "styled-components": "^5.1.1",
-    "tailwindcss": "^1.6.0",
-    "uuid": "^8.3.0"
+    "tailwindcss": "^1.6.0"
   },
   "devDependencies": {
     "babel-eslint": "^10.1.0",
