--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "tailwindcss": "^1.6.0"
   },
   "devDependencies": {
+    "@testing-library/cypress": "^6.0.0",
     "babel-eslint": "^10.1.0",
     "babel-preset-gatsby": "^0.5.4",
     "cypress": "^4.11.0",
