--- a/package.json
+++ b/package.json
@@ -46,6 +46,8 @@
   },
   "devDependencies": {
     "@testing-library/cypress": "^6.0.0",
+    "@testing-library/dom": "^7.21.7",
+    "@testing-library/react": "^10.4.7",
     "babel-eslint": "^10.1.0",
     "babel-preset-gatsby": "^0.5.4",
     "cypress": "^4.11.0",
