--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "@testing-library/dom": "^7.21.7",
     "@testing-library/jest-dom": "^5.11.2",
     "@testing-library/react": "^10.4.7",
+    "@testing-library/user-event": "^12.1.0",
     "babel-eslint": "^10.1.0",
     "babel-jest": "^26.2.2",
     "babel-preset-gatsby": "^0.5.4",
