Eslint with Airbnb and fix all problems

--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@fortawesome/free-regular-svg-icons": "^5.14.0",
     "@fortawesome/react-fontawesome": "^0.1.11",
     "@percy/agent": "^0.28.0",
+    "babel-jest": "^26.2.2",
     "babel-plugin-styled-components": "^1.11.1",
     "gatsby": "^2.24.36",
     "gatsby-plugin-manifest": "^2.4.22",
@@ -36,6 +37,7 @@
     "gatsby-plugin-sitemap": "^2.4.11",
     "gatsby-plugin-styled-components": "^3.3.10",
     "gatsby-source-graphql": "^2.7.0",
+    "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-animated-burgers": "^1.2.8",
     "react-dom": "^16.13.1",
@@ -50,15 +52,17 @@
     "@testing-library/dom": "^7.22.0",
     "@testing-library/jest-dom": "^5.11.2",
     "@testing-library/react": "^10.4.8",
-    "@testing-library/user-event": "^12.1.0",
+    "@testing-library/user-event": "^12.1.1",
     "babel-eslint": "^10.1.0",
-    "babel-jest": "^26.2.2",
     "babel-preset-gatsby": "^0.5.5",
     "cypress": "^4.12.1",
     "eslint": "^7.6.0",
+    "eslint-config-airbnb": "^18.2.0",
     "eslint-config-prettier": "^6.11.0",
+    "eslint-plugin-import": "^2.22.0",
     "eslint-plugin-jsx-a11y": "^6.3.1",
     "eslint-plugin-react": "^7.20.5",
+    "eslint-plugin-react-hooks": "^4.0.8",
     "gatsby-cypress": "^0.4.10",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^26.2.2",
