--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "dfweb-v2",
   "private": true,
   "description": "Personal portfolio",
-  "version": "0.7.5",
+  "version": "0.7.7",
   "license": "MIT",
   "scripts": {
     "build": "gatsby build",
@@ -21,12 +21,12 @@
     "@fortawesome/free-brands-svg-icons": "^5.14.0",
     "@fortawesome/free-regular-svg-icons": "^5.14.0",
     "@fortawesome/react-fontawesome": "^0.1.11",
-    "@percy/agent": "^0.28.1",
+    "@percy/agent": "^0.28.2",
     "babel-jest": "^26.3.0",
     "babel-plugin-styled-components": "^1.11.1",
-    "gatsby": "^2.24.53",
-    "gatsby-plugin-manifest": "^2.4.27",
-    "gatsby-plugin-netlify": "^2.3.13",
+    "gatsby": "^2.24.56",
+    "gatsby-plugin-manifest": "^2.4.28",
+    "gatsby-plugin-netlify": "^2.3.14",
     "gatsby-plugin-percy": "^0.1.4",
     "gatsby-plugin-postcss": "^2.3.11",
     "gatsby-plugin-purgecss": "^5.0.0",
@@ -35,25 +35,25 @@
     "gatsby-plugin-robots-txt": "^1.5.1",
     "gatsby-plugin-sitemap": "^2.4.12",
     "gatsby-plugin-styled-components": "^3.3.10",
-    "gatsby-source-graphql": "^2.7.2",
+    "gatsby-source-graphql": "^2.7.3",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-animated-burgers": "^1.2.8",
     "react-dom": "^16.13.1",
     "react-helmet": "^6.1.0",
-    "react-pdf": "^4.2.0",
+    "react-pdf": "4.2.0",
     "react-reveal-effects": "^1.0.5",
-    "styled-components": "^5.1.1",
-    "tailwindcss": "^1.7.6"
+    "styled-components": "^5.2.0",
+    "tailwindcss": "^1.8.6"
   },
   "devDependencies": {
-    "@testing-library/cypress": "^6.0.1",
-    "@testing-library/dom": "^7.23.0",
+    "@testing-library/cypress": "^7.0.0",
+    "@testing-library/dom": "^7.24.1",
     "@testing-library/jest-dom": "^5.11.4",
-    "@testing-library/react": "^10.4.9",
-    "@testing-library/user-event": "^12.1.3",
+    "@testing-library/react": "^11.0.2",
+    "@testing-library/user-event": "^12.1.4",
     "babel-eslint": "^10.1.0",
-    "babel-preset-gatsby": "^0.5.8",
+    "babel-preset-gatsby": "^0.5.9",
     "cypress": "^5.1.0",
     "eslint": "^7.8.1",
     "eslint-config-airbnb": "^18.2.0",
