--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,14 +7,14 @@ jobs:
     steps:
       - checkout
       - restore_cache:
-          key: npm-cache-v1-{{ checksum "package-lock.json" }}
+          key: yarn-packages-{{ checksum "yarn.lock" }}
       - run:
           name: Install Dependencies
-          command: npm ci
+          command: yarn ci
       - save_cache:
-          key: npm-cache-v1-{{ checksum "package-lock.json" }}
+          key: yarn-packages-{{ checksum "yarn.lock" }}
           paths:
-            - /home/circleci/.npm
+            - /home/circleci/.yarn
       - run:
           name: Run Tests
-          command: npm test
+          command: yarn test
