--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,7 +10,7 @@ jobs:
           key: yarn-packages-{{ checksum "yarn.lock" }}
       - run:
           name: Install Dependencies
-          command: yarn ci
+          command: yarn
       - save_cache:
           key: yarn-packages-{{ checksum "yarn.lock" }}
           paths:
