--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "dfweb-v2",
   "private": true,
   "description": "Personal portfolio",
-  "version": "0.8.1",
+  "version": "0.8.2",
   "license": "MIT",
   "scripts": {
     "build": "gatsby build",
@@ -21,11 +21,11 @@
     "@testing-library/jest-dom": "^5.11.4",
     "babel-jest": "^26.3.0",
     "babel-plugin-styled-components": "^1.11.1",
-    "gatsby": "^2.24.66",
-    "gatsby-plugin-manifest": "^2.4.32",
+    "gatsby": "^2.24.67",
+    "gatsby-plugin-manifest": "^2.4.33",
     "gatsby-plugin-netlify": "^2.3.16",
     "gatsby-plugin-percy": "^0.1.4",
-    "gatsby-plugin-postcss": "^2.3.13",
+    "gatsby-plugin-postcss": "^3.0.0",
     "gatsby-plugin-purgecss": "^5.0.0",
     "gatsby-plugin-react-helmet": "^3.3.12",
     "gatsby-plugin-react-svg": "^3.0.0",
@@ -38,7 +38,7 @@
     "react-animated-burgers": "^1.2.8",
     "react-dom": "^16.13.1",
     "react-helmet": "^6.1.0",
-    "react-pdf": "4.2.0",
+    "react-pdf": "5.0.0",
     "react-reveal-effects": "^1.0.7",
     "styled-components": "^5.2.0",
     "tailwindcss": "^1.8.10"
@@ -49,11 +49,12 @@
     "@testing-library/react": "^11.0.4",
     "@testing-library/user-event": "^12.1.6",
     "babel-eslint": "^10.1.0",
-    "babel-preset-gatsby": "^0.5.11",
-    "cypress": "^5.2.0",
+    "babel-preset-gatsby": "^0.5.12",
+    "cypress": "^5.3.0",
     "eslint": "^7.10.0",
     "eslint-config-airbnb": "^18.2.0",
     "eslint-config-prettier": "^6.12.0",
+    "eslint-plugin-cypress": "^2.11.2",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-jsx-a11y": "^6.3.1",
     "eslint-plugin-react": "^7.21.2",
@@ -64,7 +65,7 @@
     "netlify-plugin-cypress": "^1.4.1",
     "prettier": "^2.1.2",
     "react-test-renderer": "^16.13.1",
-    "start-server-and-test": "^1.11.4"
+    "start-server-and-test": "^1.11.5"
   },
   "repository": {
     "type": "git",
