--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "dfweb-v2",
   "private": true,
   "description": "Personal portfolio",
-  "version": "0.8.3",
+  "version": "0.9.1",
   "license": "MIT",
   "scripts": {
     "build": "gatsby build",
@@ -17,54 +17,54 @@
     "cy:open": "cypress open"
   },
   "dependencies": {
-    "@percy/agent": "^0.28.2",
-    "@testing-library/jest-dom": "^5.11.4",
-    "babel-jest": "^26.3.0",
+    "@percy/agent": "^0.28.4",
+    "@testing-library/jest-dom": "^5.11.5",
+    "babel-jest": "^26.6.1",
     "babel-plugin-styled-components": "^1.11.1",
-    "gatsby": "^2.24.67",
-    "gatsby-plugin-manifest": "^2.4.33",
-    "gatsby-plugin-netlify": "^2.3.16",
+    "gatsby": "2.24.86-ink-compiled.12",
+    "gatsby-plugin-manifest": "^2.4.35",
+    "gatsby-plugin-netlify": "^2.3.24",
     "gatsby-plugin-percy": "^0.1.4",
-    "gatsby-plugin-postcss": "^3.0.0",
+    "gatsby-plugin-postcss": "^3.0.3",
     "gatsby-plugin-purgecss": "^5.0.0",
-    "gatsby-plugin-react-helmet": "^3.3.12",
+    "gatsby-plugin-react-helmet": "^3.3.14",
     "gatsby-plugin-react-svg": "^3.0.0",
     "gatsby-plugin-robots-txt": "^1.5.3",
-    "gatsby-plugin-sitemap": "^2.4.14",
-    "gatsby-plugin-styled-components": "^3.3.12",
-    "gatsby-source-graphql": "^2.7.5",
+    "gatsby-plugin-sitemap": "^2.4.17",
+    "gatsby-plugin-styled-components": "^3.3.14",
+    "gatsby-source-graphql": "^2.7.6",
     "prop-types": "^15.7.2",
-    "react": "^16.13.1",
+    "react": "^17.0.1",
     "react-animated-burgers": "^1.2.8",
-    "react-dom": "^16.13.1",
+    "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
     "react-pdf": "5.0.0",
     "react-reveal-effects": "^1.0.7",
     "styled-components": "^5.2.0",
-    "tailwindcss": "^1.8.10"
+    "tailwindcss": "^1.9.6"
   },
   "devDependencies": {
     "@testing-library/cypress": "^7.0.1",
-    "@testing-library/dom": "^7.24.3",
-    "@testing-library/react": "^11.0.4",
-    "@testing-library/user-event": "^12.1.7",
+    "@testing-library/dom": "^7.26.3",
+    "@testing-library/react": "^11.1.0",
+    "@testing-library/user-event": "^12.1.10",
     "babel-eslint": "^10.1.0",
-    "babel-preset-gatsby": "^0.5.12",
-    "cypress": "^5.3.0",
-    "eslint": "^7.10.0",
+    "babel-preset-gatsby": "^0.5.14",
+    "cypress": "^5.4.0",
+    "eslint": "^7.12.0",
     "eslint-config-airbnb": "^18.2.0",
-    "eslint-config-prettier": "^6.12.0",
+    "eslint-config-prettier": "^6.14.0",
     "eslint-plugin-cypress": "^2.11.2",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-jsx-a11y": "^6.3.1",
-    "eslint-plugin-react": "^7.21.3",
-    "eslint-plugin-react-hooks": "^4.1.2",
+    "eslint-plugin-react": "^7.21.5",
+    "eslint-plugin-react-hooks": "^4.2.0",
     "gatsby-cypress": "^0.4.12",
     "identity-obj-proxy": "^3.0.0",
-    "jest": "^26.4.2",
+    "jest": "^26.6.1",
     "netlify-plugin-cypress": "^1.4.1",
     "prettier": "^2.1.2",
-    "react-test-renderer": "^16.13.1",
+    "react-test-renderer": "^17.0.1",
     "start-server-and-test": "^1.11.5"
   },
   "repository": {
