--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "dfweb-v2",
   "private": true,
   "description": "Personal portfolio",
-  "version": "0.9.1",
+  "version": "0.9.2",
   "license": "MIT",
   "scripts": {
     "build": "gatsby build",
@@ -21,11 +21,11 @@
     "@testing-library/jest-dom": "^5.11.5",
     "babel-jest": "^26.6.1",
     "babel-plugin-styled-components": "^1.11.1",
-    "gatsby": "2.24.86-ink-compiled.12",
-    "gatsby-plugin-manifest": "^2.4.35",
+    "gatsby": "2.24.89",
+    "gatsby-plugin-manifest": "^2.4.36",
     "gatsby-plugin-netlify": "^2.3.24",
     "gatsby-plugin-percy": "^0.1.4",
-    "gatsby-plugin-postcss": "^3.0.3",
+    "gatsby-plugin-postcss": "^3.0.4",
     "gatsby-plugin-purgecss": "^5.0.0",
     "gatsby-plugin-react-helmet": "^3.3.14",
     "gatsby-plugin-react-svg": "^3.0.0",
@@ -50,13 +50,13 @@
     "@testing-library/user-event": "^12.1.10",
     "babel-eslint": "^10.1.0",
     "babel-preset-gatsby": "^0.5.14",
-    "cypress": "^5.4.0",
-    "eslint": "^7.12.0",
+    "cypress": "^5.5.0",
+    "eslint": "^7.12.1",
     "eslint-config-airbnb": "^18.2.0",
-    "eslint-config-prettier": "^6.14.0",
+    "eslint-config-prettier": "^6.15.0",
     "eslint-plugin-cypress": "^2.11.2",
     "eslint-plugin-import": "^2.22.1",
-    "eslint-plugin-jsx-a11y": "^6.3.1",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-react": "^7.21.5",
     "eslint-plugin-react-hooks": "^4.2.0",
     "gatsby-cypress": "^0.4.12",
@@ -73,5 +73,5 @@
   },
   "bugs": {
     "url": "https://github.com/gatsbyjs/gatsby/issues"
-  }
+  }  
 }
