--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "@testing-library/jest-dom": "^5.11.5",
     "babel-jest": "^26.6.2",
     "babel-plugin-styled-components": "^1.11.1",
-    "gatsby": "2.24.89",
+    "gatsby": "^2.24.89",
     "gatsby-plugin-manifest": "^2.5.1",
     "gatsby-plugin-netlify": "^2.4.0",
     "gatsby-plugin-percy": "^0.1.4",
