--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "dfweb-v2",
   "private": true,
   "description": "Personal portfolio",
-  "version": "0.9.6",
+  "version": "0.9.7",
   "license": "MIT",
   "scripts": {
     "build": "gatsby build",
@@ -41,6 +41,7 @@
     "react-helmet": "^6.1.0",
     "react-pdf": "5.0.0",
     "react-reveal-effects": "^1.0.7",
+    "react-spring": "^8.0.27",
     "styled-components": "^5.2.1",
     "tailwindcss": "^2.0.1"
   },
