--- a/netlify.toml
+++ b/netlify.toml
@@ -3,3 +3,8 @@
 [build]
   command = "npm run build"
   publish = "public"
+# Cypress plugin
+[[plugins]]
+  package = "netlify-plugin-cypress"
+  [plugins.inputs]
+    record = false
