Fix CircleCI tests

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "dfweb-v2",
   "private": true,
   "description": "Personal portfolio",
-  "version": "1.0.15",
+  "version": "1.0.16",
   "license": "MIT",
   "scripts": {
     "build": "gatsby build",
@@ -13,18 +13,18 @@
     "serve": "gatsby serve",
     "clean": "gatsby clean",
     "test:cypress": "cypress run",
-    "test": "jest",
+    "test": "jest --env=jsdom",
     "testcafe": "start-test develop http://localhost:8000 testcafex",
     "testcafex": "percy exec -- testcafe chrome:headless testcafe/**/*",
     "cy:open": "cypress open"
   },
   "dependencies": {
+    "@reach/router": "^1.3.4",
     "@testing-library/jest-dom": "^5.14.1",
     "@types/cypress": "^1.1.3",
     "babel-jest": "^27.2.4",
     "babel-plugin-styled-components": "^1.13.2",
     "gatsby": "^3.14.1",
-    "gatsby-link": "^3.14.0",
     "gatsby-plugin-manifest": "^3.14.0",
     "gatsby-plugin-netlify": "^3.14.0",
     "gatsby-plugin-postcss": "^4.14.0",
@@ -33,8 +33,8 @@
     "gatsby-plugin-robots-txt": "^1.6.10",
     "gatsby-plugin-sitemap": "^4.10.0",
     "gatsby-plugin-styled-components": "^4.14.0",
-    "gatsby-react-router-scroll": "^4.14.0",
     "gatsby-source-graphql": "^3.14.0",
+    "netlify-plugin-cypress": "^2.2.0",
     "postcss": "^8.3.9",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
@@ -70,7 +70,6 @@
     "gatsby-cypress": "^1.14.0",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^27.2.4",
-    "netlify-plugin-cypress": "^2.2.0",
     "prettier": "^2.4.1",
     "react-test-renderer": "^17.0.2",
     "start-server-and-test": "^1.14.0",
