Oppgrader CircleCI orb

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,6 +1,6 @@
 version: 2.1
 orbs:
-  node: circleci/node@5.0.0
+  node: cimg/node:current-browsers
 jobs:
   build:
     working_directory: ~/dfweb
