--- a/package.json
+++ b/package.json
@@ -2,13 +2,13 @@
   "name": "dfweb",
   "private": true,
   "description": "Personal portfolio",
-  "version": "1.0.30",
+  "version": "2.0.30",
   "license": "MIT",
   "scripts": {
     "build": "gatsby clean && gatsby build",
     "develop": "gatsby clean && gatsby develop",
     "dev": "start-test develop 8000 cy:open",
-    "format": "prettier --write \"**/*.{js,jsx,json,md}\"",
+    "format": "npx prettier --write \"**/*.{js,jsx,json}\"",
     "start": "npm run develop",
     "serve": "gatsby serve",
     "clean": "gatsby clean",
@@ -18,7 +18,7 @@
     "testcafex": "percy exec -- testcafe chrome:headless testcafe/**/*",
     "cy:open": "cypress open",
     "stylelint": "stylelint **/*.css --fix",
-    "refresh": "rm -rf node_modules && rm package-lock.json && npm i --legacy-peer-deps",
+    "refresh": "rm -rf node_modules && rm package-lock.json && npm i --legacy-peer-deps && npm run format",
     "bump": "npx npm-check-updates --target minor -u && npm i",
     "lint": "eslint --fix --ext .js,.jsx ."
   },
